syntax = "proto3";

// import "validate/validate.proto";
import "students.proto";

package main;

option go_package = "/proto/gen;gRPCapipb";

service TeachersService {
    rpc GetTeachers (GetTeachersRequest) returns (Teachers);
    rpc AddTeachers (Teachers) returns (Teachers);
    rpc UpdateTeachers (Teachers) returns (Teachers);
    rpc DeleteTeachers (TeacherIDs) returns (DeleteTeachersConfirmation);
    rpc GetStudentsByClassTeacher (TeacherID) returns (Students);
    rpc GetStudentCountByClassTeacher (TeacherID) returns (StudentCount);
}

message StudentCount {
    bool status = 1;
    int32 student_count = 2;
}

message DeleteTeachersConfirmation {
    string status = 1;
    repeated string deleted_ids = 2;
}

message TeacherID {
    string id = 1;
}

message TeacherIDs {
    repeated TeacherID ids = 1;
}

message GetTeachersRequest {
    Teacher teacher = 1;
    repeated SortField sort_by = 2;
    uint32 page_number = 3;
    uint32 page_size = 4;
}

message Teacher {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string class = 5;
    string subject = 6;
}

message Teachers {
    repeated Teacher teachers = 1;
}

